--- a/5. Intermediate CSS/CSS - My Site/index.html
+++ b/5. Intermediate CSS/CSS - My Site/index.html
@@ -19,56 +19,48 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Digbijay.</h1>
-        <p>a web designer</p>
+        <h2>a web developer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
-
-    </div>
-    <div class="bottom-container">
-
-    </div>
-    <!-- <nav>
-        <a>About</a>
-        <a>Work</a>
-        <a>Notes</a>
-    </nav>
-    <div>
-        <h1>I'm Digbijay.</h1>
-        <p>a web designer</p>
-    </div>
-    <div>
-        <h3>Hi.</h3>
-        <p>I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to create for web and
-        mobile devices.</p>
-    </div>
-    <h2>What I can do.</h2>
-    <div>
-        <section>
-            <h3>Design what you want</h3>
-            <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to
-                send.</p>
-        </section>
-        <section>
-            <h3>Develop what you need</h3>
-            <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
-        </section>
-    </div>
-    <h1>I can help.</h1>
-    <div>
-        <p>
-            I’m currently available for freelance work.
-            If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then
-            get in touch.
-        </p>
-    </div>
-    <button>Message Me</button>
-    <footer>
-        <div>
-
+        <div class="profile">
+            <img src="images/digbijay-circle.png" alt="profile-img">
+            <h2>Hello.</h2>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            </p>
         </div>
-    </footer> -->
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="code-img" src="images/computer.png" alt="skill-img">
+                <h3>Design & Development</h3>
+                <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+            </div>
+            <div class="skill-row">
+                <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
+                <h3>Hot Wings Challenge</h3>
+                <p>But my best skill is actually in eating hot wings. I m the undisputed queen of hot wing challenge. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Name Surname.</p>
+    </div>
+
 </body>
 
 </html>
